# RayTracer

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
geom/: geometry.h  intersection.h  ray.h  sphere.h  triangle.h  vector.h
geometry/: triangle.h
include/geometry/: geometry.h  intersection.h  ray.h  sphere.h  vector.h
include/raytracer/: camera.h  common_libs.h  image.h  logs.h  render.h  renderBVH.h
include/raytracer/BVH/: box.h  tree.h
include/reader/: light.h  object.h  scene.h  scene_utils.h
raytracer/: a.out  camera.h  common_libs.h  image.h  main.cpp  raytracer  raytracerlib.h  render.h  renderBVH.h  render_options copy.h  render_options.h  test  test.ppm
raytracer-geom/: geometry.h  intersection.h  ray.h  sphere.h  triangle.h
raytracer-reader/: light.h  material.h  my_tests.cpp  object.h  scene.h  scene_utils.h  test.cpp
raytracer/BVH/: box.h  bvh.h  bvh.md  bvh_copy.h  tree.h
reader/: light.h  material.h  my_tests.cpp  object.h  scene.h  scene_utils.h
tests/: coordinates.txt
